--- a/learn-tech/src/components/navbar.css
+++ b/learn-tech/src/components/navbar.css
@@ -6,13 +6,17 @@
     .hero{
         height: 100vh;
         width: 100%;
-
     }
     nav{
         display: flex;
         align-items: center;
         justify-content:flex-start;
+        /* background-color: rgb(103, 255, 255); */
+        padding-top: 5px;
   
+    }
+    nav img{
+        margin-bottom: 0px;
     }
     .logo{
         color:  #59b049;
@@ -21,19 +25,19 @@
     nav ul{
         justify-content: end;
         margin-top: 15px;
-        margin-left: 80px;
-        padding-left: 50px;
-        padding-right: 40px;
+        margin-left: 150px;
+        padding-left: 100px;
+        padding-right: 20px;
         
     }
     nav ul li {
-        list-style-type: none;
+        /* list-style-type: none; */
         display: inline-block;
-        padding: 10px 20px;
+        padding: 17px 15px 0px 15px;
     }
     nav ul li a{
         color: black;
-        font-size: 24px;
+        font-size: 22px;
         text-decoration: none;
         font-weight: bold;
     }
@@ -44,8 +48,9 @@
     button{
         border: none;
         background-color: #59b049;
-        padding: 12px 30px;
+        padding: 10px 30px;
         margin-right: 20px;
+        margin-top: 15px;
         border-radius: 30px;
         color: white;
         font-size: 15px;
@@ -54,4 +59,22 @@
     button:hover{
         transform: scale(1.3);
         cursor:  pointer;
+    }
+    .menubar ul{
+        display: flex;
+        justify-content: space-between;
+        padding: 0px 22px;
+        border: 2px solid black;
+        margin-bottom: 0px;
+    }
+    
+    .menubar li{
+        /* background-color: beige; */
+        list-style: none;
+    }
+    .menubar a {
+        text-decoration: none;
+        font-size: 24px;
+        font-weight: 550;
+        color:rgb(141, 84, 10);
     }
